--- a/get_started_for_free_style.css
+++ b/get_started_for_free_style.css
@@ -122,7 +122,7 @@ section {
 .right {
     display: flex;
     flex-direction: column;
-    background: url('/images/photo-1516900557549-41557d405adf.jpeg') no-repeat;
+    background: url('./images/photo-1516900557549-41557d405adf.jpeg') no-repeat;
     background-attachment: fixed;
     background-position: 500px;
     margin-right: 0px;
